# skillhost

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/sh-upload-pypi/: SKILL.md
.agents/skills/sh-upload-pypi/agents/: openai.yaml
docs/: plan-v0.md  plan-v1.md  plan-v2.md  plan-v3.md  plan-v4.md  plan-v5.md  plan-v6.md  plan-v7.md  plan-web-v1.md
skillhost-skill/: SKILL.md
skillhost-skill/references/: skillhost-cli.md
src/skillhost/: __init__.py  agents.py  cli.py  config.py  discovery.py  errors.py  git_utils.py  linking.py  paths.py  projects.py
tests/: fixture_repos.json  test_cli.py  test_cli_plan_v5.py  test_cli_v7.py  test_discovery.py  test_git_utils.py  test_linking.py  test_projects.py  test_real_e2e.py
tests/web/: test_skillhost_frontend.py
web/frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json
web/frontend/src/: App.tsx  styles.css
web/frontend/src/components/: AgentSupport.tsx  CodeBlock.tsx  FeatureGrid.tsx  Footer.tsx  Header.tsx  Hero.tsx  InstallSection.tsx  ProblemSolutionBento.tsx  ScenarioCard.tsx  SecuritySection.tsx  SkillFlowIllustration.tsx  ThemeToggle.tsx  Workflow.tsx
