[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillhost"
version = "0.1.1"
description = "Install Agent Skills from Git repositories using symlinks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Skillhost contributors" }]
keywords = ["agents", "skills", "cli", "symlinks", "codex", "claude", "opencode"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://skillhost.dev"
Repository = "https://github.com/skillhost-dev/skillhost"
Issues = "https://github.com/skillhost-dev/skillhost/issues"

[project.scripts]
skillhost = "skillhost.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/skillhost"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
